Use brokerName as the identifier, rather than ID
Broker name is user-specified and must be unique (within a k8s
namespace). Given k8s doesn't let us filter by metadata.UID (at least
right now ...) we decided to use the uniquness of the name as an
identifier.

[#163906192]

Co-authored-by: Ed King <eking@pivotal.io>
Co-authored-by: Aarti Kriplani <akriplani@pivotal.io>

--- a/config/crds/osbapi_v1alpha1_serviceinstance.yaml
+++ b/config/crds/osbapi_v1alpha1_serviceinstance.yaml
@@ -30,7 +30,7 @@ spec:
           type: object
         spec:
           properties:
-            brokerID:
+            brokerName:
               type: string
             name:
               type: string
@@ -42,7 +42,7 @@ spec:
           - name
           - planID
           - serviceID
-          - brokerID
+          - brokerName
           type: object
         status:
           properties:
