Update location of our test broker docker image
[#164630997]

--- a/acceptance/assets/broker/overview-broker-deployment.yaml
+++ b/acceptance/assets/broker/overview-broker-deployment.yaml
@@ -29,6 +29,6 @@ spec:
     spec:
       containers:
       - name: overview-broker
-        image: mattmcneeney/overview-broker:latest
+        image: ismteam/overview-broker:latest
         ports:
         - containerPort: 8080
