--- a/config/crds/osbapi_v1alpha1_servicebinding.yaml
+++ b/config/crds/osbapi_v1alpha1_servicebinding.yaml
@@ -49,6 +49,8 @@ spec:
           type: object
         status:
           properties:
+            secretRef:
+              type: object
             state:
               type: string
           type: object
