Refactor broker Status
It is now more in line with how k8s represents status for its
"internal" resources (i.e. pods). It's also a lot more extensible now.

[#163866149]

Co-authored-by: Josh Hill <jhill@pivotal.io>

--- a/config/crds/osbapi_v1alpha1_broker.yaml
+++ b/config/crds/osbapi_v1alpha1_broker.yaml
@@ -46,8 +46,8 @@ spec:
           type: object
         status:
           properties:
-            state:
-              type: string
+            registered:
+              type: object
           type: object
   version: v1alpha1
 status:
