Revert "Refactor broker Status"
This reverts commit e536a734770f89ecd1850c4170d9f52a66a20517.
We are going to go for a simpler status object for now.

Co-authored-by: Sam Gunaratne <sgunaratne@pivotal.io>

[#163866149]

--- a/config/crds/osbapi_v1alpha1_broker.yaml
+++ b/config/crds/osbapi_v1alpha1_broker.yaml
@@ -46,8 +46,8 @@ spec:
           type: object
         status:
           properties:
-            registered:
-              type: object
+            state:
+              type: string
           type: object
   version: v1alpha1
 status:
