--- a/config/crds/osbapi_v1alpha1_broker.yaml
+++ b/config/crds/osbapi_v1alpha1_broker.yaml
@@ -46,6 +46,8 @@ spec:
           type: object
         status:
           properties:
+            message:
+              type: string
             state:
               type: string
           type: object
