Pin acceptance tests to overview-broker:ci-0.0.1
This avoids changes to the overview-broker:latest image from
impacting our CI. We manually created and pushed the ci-0.0.1
tag, rather than automating it in the overview-broker pipeline as
this seemed like overkill for now.

[#165377202]

Co-authored-by: Ed King <eking@pivotal.io>

--- a/acceptance/assets/broker/overview-broker-deployment.yaml
+++ b/acceptance/assets/broker/overview-broker-deployment.yaml
@@ -29,6 +29,6 @@ spec:
     spec:
       containers:
       - name: overview-broker
-        image: ismteam/overview-broker:latest
+        image: ismteam/overview-broker:ci-0.0.1
         ports:
         - containerPort: 8080
