Add concourse resource icons
[#163623047]

Co-authored-by: Josh Hill <jhill@pivotal.io>

--- a/ci/pipeline.yml
+++ b/ci/pipeline.yml
@@ -50,12 +50,14 @@ jobs:
 resources:
 - name: ism
   type: git
+  icon: github-face
   source:
     uri: https://github.com/pivotal-cf/ism
     branch: master
 
 - name: ism-controller-image
   type: docker-image
+  icon: docker
   source:
     repository: ismteam/controller
     username: {{DOCKERHUB_USERNAME}}
